# To-Point

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
controladores/: contrIni.py  contrSobre.py
static/: codigojs.js  styles.css
sumarizador/: extrairConteudo.py  sumarizar.py
templates/: base.html  end.html  erro.html  index.html  sobre.html
to_point/: Dockerfile  manage.py
to_point/app/: urls.py
to_point/to_point/: asgi.py  settings.py  urls.py  wsgi.py
versao_01/: Link Para Download  README.md  Readme.md
