[tool.poetry]
name = "to-point"
version = "0.1.0"
description = ""
authors = ["vitor <vitorsantoslopes1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.8"
python-dotenv = "^1.0.1"
pytest = "^8.2.0"
pytest-django = "^4.8.0"
django-stubs = "^5.0.0"
pylint-django = "^2.5.5"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
